# WARNING: head commit changed in the meantime
Merge branch 'master' of
https://github.com/EvgennT/Dogodki_praktikum.git

Conflicts:
	application/controllers/CtrMain.php
	application/models/ModelDogodki.php
	application/views/dodaj_dogodek.php
	application/views/main_page.php

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,5 +3,7 @@ encoding//application/controllers/CtrMain.php=UTF-8
 encoding//application/models/ModelDogodki.php=UTF-8
 encoding//application/models/ModelUporabniki.php=UTF-8
 encoding//application/views/dodaj_dogodek.php=UTF-8
+encoding//application/views/dogodek.php=UTF-8
 encoding//application/views/login.php=UTF-8
 encoding//application/views/main_page.php=UTF-8
+encoding//application/views/uredi_dogodek.php=UTF-8
