registracija in modeli

--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine on
 RewriteBase /Dogodki_praktikum/
-RewriteCond $1 !^(index\.php|css|\.php)
+RewriteCond $1 !^(index\.php|css|js|\.php)
 
 RewriteRule ^(.*)$ /Dogodki_praktikum/index.php?/$1 [L]
 
