--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -6,5 +6,6 @@ encoding//application/views/dodaj_dogodek.php=UTF-8
 encoding//application/views/dogodek.php=UTF-8
 encoding//application/views/login.php=UTF-8
 encoding//application/views/main_page.php=UTF-8
+encoding//application/views/nalozi_sliko.php=UTF-8
 encoding//application/views/registracija.php=UTF-8
 encoding//application/views/uredi_dogodek.php=UTF-8
